# geant4-carpet-2

./: .gitignore  CMakeLists.txt  Carpet2.cc  GNUmakefile  README.md  configure.sh  configure.sh.example  rebuild.sh  recompile.sh
corsika2geant/: .gitignore  README.md
corsika2geant/lib_usage/: dump_to_text.cpp  run-dump-to-text.sh
include/: C2Detector.hh  C2Physics.hh  C2Primary.hh
src/: C2Detector.cc  C2Particles.cc  C2Physics.cc  C2Primary.cc  C2Step.cc
